// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with an error 1`] = `
<div
  className="app-background"
>
  <a
    href="/"
    onClick={[Function]}
  >
    back
  </a>
  <h1>
    Let's sign you in
  </h1>
  <form
    onSubmit={[Function]}
  >
    <input
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      type="text"
      value="info@test.com"
    />
    <input
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="123abc"
    />
    <a
      href="/pw-forget"
      onClick={[Function]}
    >
      Forgot Password?
    </a>
    <button
      disabled={true}
      type="submit"
    >
      Sign In
    </button>
    <p>
      some error
    </p>
  </form>
  <p>
    Don't have an account? 
    <a
      href="/signup"
      onClick={[Function]}
    >
      Sign Up
    </a>
  </p>
</div>
`;

exports[`renders with some data 1`] = `
<div
  className="app-background"
>
  <a
    href="/"
    onClick={[Function]}
  >
    back
  </a>
  <h1>
    Let's sign you in
  </h1>
  <form
    onSubmit={[Function]}
  >
    <input
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      type="text"
      value="info@test.com"
    />
    <input
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="123abc"
    />
    <a
      href="/pw-forget"
      onClick={[Function]}
    >
      Forgot Password?
    </a>
    <button
      disabled={false}
      type="submit"
    >
      Sign In
    </button>
  </form>
  <p>
    Don't have an account? 
    <a
      href="/signup"
      onClick={[Function]}
    >
      Sign Up
    </a>
  </p>
</div>
`;
